corrected one misspelling

--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
     <ul>
         <li><a href="Ebook mockup website/index.html" target="_blank">Ebook mockup website</a></li>
         <li><a href="Codecademy Project - Dasmotos Arts and Crafts/index.html" target="_blank">Codecademy Project - Dasmotos Arts and Crafts</a></li>
-        <li><a href="Codecademy Project - Git Cheatsheet/index.html" targe="_blank">Codecademy Project - Git Cheatsheet</a></li>
+        <li><a href="Codecademy Project - Git Cheatsheet/index.html" target="_blank">Codecademy Project - Git Cheatsheet</a></li>
 </body>
 </html>
