added <th> to the "Git Cheatsheet project" table

--- a/Codecademy Project - Git Cheatsheet/index.html
+++ b/Codecademy Project - Git Cheatsheet/index.html
@@ -14,6 +14,10 @@
 
     <table>
         <tr>
+          <th >Słowo</th>
+          <th >Definicja</th> 
+        </tr>
+        <tr>
             <td class="Słowo">Repozytorium</td>
             <td class="Definicja">folder, w którym Git śledzi projekt i historię jego zmian</td>
         </tr>
